--- a/index.html
+++ b/index.html
@@ -11,96 +11,100 @@
   <link rel="stylesheet" href="css/type.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+  <ul class="skip-links">
+    <li><a href="#main">Skip to main content</a></li>
+    <li><a href="#nav">Skip to navigation</a></li>
+  </ul>
 
-  <body>
-    <ul class="skip-links">
-      <li><a href="#main">Skip to main content</a></li>
-      <li><a href="#nav">Skip to navigation</a></li>
-    </ul>
-    <header role="banner">
-      <div class="grid grid-middle wrapper">
-        <div class="logo unit xs-1 s-1 m-1 l-1-3 pad-t-1-2 pad-b-1-2 gutter-1-4">
-          <h1 class="kilo text-center push-0"><i class="jp-lang yotta not-italic block push-0 " lang="ja">枯山水</i>
-            Rock Gardens</h1>
-          </div>
-          <nav class="unit xs-1 s-1 m-1 l-2-3 text-center pad-t-1-2 pad-b-1-2" id="nav" role="navigation" tabindex="0">
-            <ul class="list-group-inline mega nav-styling push-0">
-              <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Viewing</a></li>
-              <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Gravel</a></li>
-              <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Symbolism</a></li>
-            </ul>
-          </nav>
+  <header role="banner">
+    <div class="grid grid-middle wrapper">
+      <div class="logo unit xs-1 s-1 m-1 l-1-3 pad-t-1-2 pad-b-1-2 gutter-1-4">
+        <h1 class="kilo text-center push-0"><i class="jap-text yotta not-italic block push-0 " lang="ja">枯山水</i>
+          Rock Gardens</h1>
+      </div>
+
+      <nav class="unit xs-1 s-1 m-1 l-2-3 text-center pad-t-1-2 pad-b-1-2" id="nav" role="navigation" tabindex="0">
+        <ul class="list-group-inline mega nav-style push-0">
+          <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Viewing</a></li>
+          <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Gravel</a></li>
+          <li class="gutter-1-4"><a class="ib pad-t-1-8 pad-b-1-8" href="#">Symbolism</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main" role="main" tabindex="0">
+
+    <div class="embed embed-5by1 push">
+      <img class="img-flex embed-item" src="images/banner.svg" alt="zen garden">
+    </div>
+
+    <div class="text-center pad-t pad-b max-length push">
+      <div class="pad-t pad-b gutter section-border">
+        <i class="yotta jap-text not-italic push-1-2 block" lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
+        <p class="mega push-0 gutter-2">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      </div>
+    </div>
+
+    <section class="grid grid-stretch gutter-1-4 push">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1-2 l-1-3 gutter-1-4">
+        <div class="embed embed-3by2 push-1-2">
+          <img class="embed-item img-flex" src="images/viewing.svg" alt="" role="presentation">
         </div>
-      </header>
-
-      <main id="main" role="main" tabindex="0">
-
-        <div class="embed embed-5by1 push">
-          <img class="img-flex embed-item" src="images/banner.svg" alt="zen garden">
+        <h2 class="push-1-2">
+          <i class="jap-text not-italic exa" lang="ja">閲覧</i>
+          <span class="mega block">Viewing</span>
+        </h2>
+        <p class="push-1-2 content-fill">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <div class="push">
+          <a class="btn btn-ghost" href="#">Learn more about Viewing</a>
         </div>
+      </div>
 
-        <div class="text-center pad-t pad-b max-length push">
-          <div class="pad-t pad-b gutter section-border">
-            <i class="yotta jp-lang not-italic push-1-2 block" lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
-            <p class="mega push-0 gutter-2">Imitate the intimate essence of nature & discover the true meaning of life.</p>
-          </div>
+      <div class="unit unit-content-distribute xs-1 s-1 m-1-2 l-1-3 gutter-1-4">
+        <div class="embed embed-3by2 push-1-2">
+          <img class="embed-item img-flex" src="images/gravel.svg" alt="" role="presentation">
         </div>
+        <h2 class="push-1-2">
+          <i class="jap-text not-italic exa" lang="ja">砂利</i>
+          <span class="mega block">Gravel</span>
+        </h2>
+        <p class="push-1-2 content-fill">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <div class="push">
+          <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
+        </div>
+      </div>
 
-        <section class="grid grid-stretch gutter-1-4 push">
-          <div class="unit unit-content-distribute xs-1 s-1 m-1-2 l-1-3 gutter-1-4">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-3 gutter-1-4">
+        <div class="grid grid-middle l-content-distribute content-fill push-0">
+          <div class="unit xs-1 s-1 m-2-3 l-1 gutter-1-4">
             <div class="embed embed-3by2 push-1-2">
-              <img class="embed-item img-flex" src="images/viewing.svg" alt="" role="presentation">
+              <img class="embed-item img-flex" src="images/symbolism.svg" alt="" role="presentation">
             </div>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1-3 l-1 gutter-1-4 content-fill unit-content-distribute">
             <h2 class="push-1-2">
-              <i class="jp-lang not-italic exa" lang="ja">閲覧</i>
-              <span class="mega block">Viewing</span>
+              <i class="jap-text not-italic exa" lang="ja">象徴主義</i>
+              <span class="mega block">Symbolize</span>
             </h2>
-            <p class="push-1-2 content-fill">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+
+            <p class="push-1-2 content-fill">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
             <div class="push">
-              <a class="btn btn-ghost" href="#">Learn more about Viewing</a>
+              <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
 
-          <div class="unit unit-content-distribute xs-1 s-1 m-1-2 l-1-3 gutter-1-4">
-            <div class="embed embed-3by2 push-1-2">
-              <img class="embed-item img-flex" src="images/gravel.svg" alt="" role="presentation">
-            </div>
-            <h2 class="push-1-2">
-              <i class="jp-lang not-italic exa" lang="ja">砂利</i>
-              <span class="mega block">Gravel</span>
-            </h2>
-            <p class="push-1-2 content-fill">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-            <div class="push">
-              <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
-            </div>
-          </div>
+  </main>
 
-          <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-3 gutter-1-4">
-            <div class="grid grid-middle l-content-distribute content-fill push-0">
-              <div class="unit xs-1 s-1 m-2-3 l-1 gutter-1-4">
-                <div class="embed embed-3by2 push-1-2">
-                  <img class="embed-item img-flex" src="images/symbolism.svg" alt="" role="presentation">
-                </div>
-              </div>
-              <div class="unit xs-1 s-1 m-1-3 l-1 gutter-1-4 content-fill unit-content-distribute">
-                <h2 class="push-1-2">
-                  <i class="jp-lang not-italic exa" lang="ja">象徴主義</i>
-                  <span class="mega block">Symbolize</span>
-                </h2>
-                <p class="push-1-2 content-fill">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-                <div class="push">
-                  <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+  <footer class="pad-t-1-2 pad-b-1-2 gutter-1-2" role="contentinfo">
+    <small class="micro">© 794 Heian Period</small>
+  </footer>
 
-      </main>
-
-      <footer class="pad-t-1-2 pad-b-1-2 gutter-1-2" role="contentinfo">
-        <small class="micro">© 794 Heian Period</small>
-      </footer>
-    </body>
-    </html>
+</body>
+</html>
